# OntoLearner

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTANANCE.md  MAINTENANCE.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  text2onto.py
.github/workflows/: python-publish.yml  test-os-compatibility.yml  test-package.yml
data/datasets/: relation_dataset.json  train_typing_dataset.json
data/ontologies/: foaf-dataset.owl  icon-ontology.owl
docs/: requirements.txt
docs/source/: Introduction.rst  conf.py  huggingface.rst  index.rst  installation.rst  introduction.rst  quickstart-1.rst  quickstart.rst
examples/: complexity_score.py  llm_learner.py  llm_learner_alexbek_cross_attn_taxonomy_discovery.py  llm_learner_alexbek_rag_term_typing.py  llm_learner_alexbek_rf_term_typing.py  llm_learner_alexbek_self_attn_taxonomy_discovery.py  llm_learner_alexbek_text2onto.py  llm_learner_pipeline_usage.py  llm_learner_rwthdbis_taxonomy_discovery.py  llm_learner_rwthdbis_term_typing.py  llm_learner_sbunlp_fs_taxonomy_discovery.py  llm_learner_sbunlp_text2onto.py  llm_learner_sbunlp_zs_term_typing.py  llm_learner_skhnlp_sft_taxonomoy_discovery.py  llm_learner_skhnlp_zs_taxonomoy_discovery.py  load_ontology.py  pipeline.ipynb  rag_learner.py  rag_learner_pipeline_usage.py  retriever_learner.py  retriever_learner_pipeline_usage.py  text2onto.py
experiments/: llm_learner_alexbek_rag_term_typing.py  llm_learner_alexbek_rf_term_typing.py  llm_learner_alexbek_self_attn_taxonomy_discovery.py  llm_learner_rwthdbis_taxonomy_discovery.py  llm_learner_rwthdbis_term_typing.py  llm_learner_sbunlp_fs_taxonomy_discovery.py  llm_learner_sbunlp_zs_term_typing.py  llm_learner_skhnlp_sft_taxonomoy_discovery.py  llm_learner_skhnlp_zs_taxonomoy_discovery.py
experiments/myenv/: pyvenv.cfg
metadata/: metadata-exporter.py  ontolearner-metadata.rdf
ontolearner/: __init__.py  _learner.py  _ontology.py  learner_pipeline.py  pipeline.py  processor.py
ontolearner/analyzer/: analyzer.py  base_analyzer.py
ontolearner/base/: __init__.py  data_model.py  learner.py  ontology.py  text2onto.py  text_ontology.py  textual.py
ontolearner/data_structure/: __init__.py  data.py  metric.py
ontolearner/evaluation/: __init__.py  evaluate.py  metrics.py  visualisations.py
ontolearner/generators/: ol_dataset_generator.py
ontolearner/learner/: __init__.py  label_mapper.py  llm.py  prompt.py  rag.py  retriever.py
ontolearner/llm_evaluations/: llm_evaluator.py  llm_ol_datasets_testing.py
ontolearner/metric/: analyzer.py  metric_model.py  visualizer.py
ontolearner/ontology/: __init__.py  administration.py  agricultural.py  agriculture.py  arts_and_humanities.py  arts_humanities.py  artwork.py  basic.py  biology.py  building_equipment.py  chemistry.py  computer.py  computer_science.py  conference.py  dbpedia.py  ecology_environment.py  education.py  emotion.py  enterprise.py  environment.py  event.py  events.py  finance.py  food.py  food_beverage.py  general.py  geography.py  healthcare.py  human_disease.py  icon.py  industry.py  interoperability.py  law.py  library_cultural_heritage.py  life.py  livestock.py  manufacturing.py  material_science.py  material_science_engineering.py  medicine.py  (+14 more)
ontolearner/processor/: process_ontology.py
ontolearner/text2onto/: __init__.py  batchifier.py  general.py  splitter.py  synthesizer.py  traditional.py
ontolearner/textual/: __init__.py  traditional.py
ontolearner/tools/: __init__.py  analyzer.py  evaluator.py  visualizer.py
ontolearner/utils/: __init__.py  io.py  io_utils.py  train_test_split.py  utils.py
scripts/: .env-example  add_new_ontology.py  call_learners.py  download_from_huggingface.py  hf_integration.py  metrics.xlsx  plots.py  push_onto_to_hf.py
scripts/examples/: learner_example_llm.py  learner_example_rag.py  learner_example_retriever.py  non_taxonomy_discovery_example.py  taxonomy_discovery_example.py  term_typing_example.py  termtyping.py
scripts/learner_examples/: llm_learner.py  retriever_learner.py
scripts/metrics/: metrics copy 2.xlsx  metrics.xlsx
tests/: test_basics.py  test_cross_encoder_retriever.py  test_llm_retriever.py  test_ngram_retriever.py  test_ontologizers.py  test_text2onto_synthesizer.py  test_word2vec_glove_retrievers.py
(+610 files in other folders)
