[tool.poetry]
name = "OntoLearner"
version = "0.0.0"
description = "OntoLearner: A Modular Python Library for Ontology Learning with LLMs."
authors = ["Hamed Babaei Giglou <hamedbabaeigiglou@gmail.com>", "Andrei C. Aioanei <andrei.c.aioanei@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://ontolearner.readthedocs.io/"
repository = "https://github.com/sciknoworg/OntoLearner/"
include = ["images/logo.png"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14.0"

# Core deps
rdflib = "7.1.1"
networkx = "3.2.1"
numpy = "*"
pandas = "*"
openpyxl = "*"
tqdm = "*"
pydantic = "2.11.3"
pathlib = "1.0.1"
python-dotenv = "*"
matplotlib = "*"
seaborn = "*"
scikit-learn = "1.6.1"
huggingface-hub = "0.34.4"

# LLM stack (CPU by default)
torch = { version = "^2.8.0", source = "pytorch-cpu" }
transformers = "^4.56.0"
sentence-transformers = "^5.1.0"
dspy = "^2.6.14"

[tool.poetry.extras]
# GPU-only extras
gpu = [
    "torch==^2.8.0",        # GPU wheel (auto CUDA)
    "bitsandbytes=^0.45.1"  # allow minor/patch updates
]

[tool.poetry.dev-dependencies]
ruff = "*"
pre-commit = "*"
setuptools = "*"
wheel = "*"
twine = "*"
pytest = "*"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
source = "attr"
attr = "ontolearner.__version__"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.4.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.source]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
