[tool.poetry]
name = "OntoLearner"
version = "0.0.0"
description = "OntoLearner: A Modular Python Library for Ontology Learning with LLMs."
authors = ["Hamed Babaei Giglou <hamedbabaeigiglou@gmail.com>", "Andrei C. Aioanei <andrei.c.aioanei@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://ontolearner.readthedocs.io/"
repository = "https://github.com/sciknoworg/OntoLearner/"
include = ["images/logo.png"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14.0"
rdflib = "7.1.1"
networkx = "3.2.1"
numpy = "*"
pandas = "*"
openpyxl = "*"
tqdm = "*"
g4f = "*"
pydantic = "2.11.3"
pathlib = "1.0.1"
python-dotenv = "*"
matplotlib = "*"
seaborn = "*"
scikit-learn = "*"
huggingface-hub = "^0.34.4"
torch = "^2.8.0"
transformers = "^4.56.0"
sentence-transformers = "^5.1.0"
dspy = "^3.1.3"
bitsandbytes = { version = ">=0.45.1,<1.0.0", markers = "platform_system == 'Linux'" }
mistral-common = { version = "^1.8.5", extras = ["sentencepiece"] }
protobuf = "^6.33.5"
Levenshtein = "*"
gensim="*"

[tool.poetry.dev-dependencies]
ruff = "*"
pre-commit = "*"
setuptools = "*"
wheel = "*"
twine = "*"
pytest = "*"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
source = "attr"
attr = "ontolearner.__version__"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.4.0"]
build-backend = "poetry_dynamic_versioning.backend"
